# qt_clion

./: .gitignore  CMakeLists.txt  FFmpegs.cpp  FFmpegs.h  audiothread.cpp  audiothread.h  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  playthread.cpp  playthread.h  qt-sound.pro
mac/: Info.plist
single/: receiver.cpp  receiver.h  sender.cpp  sender.h
